# spaczz

./: pyproject.toml
src/spaczz/matcher/: regexmatcher.py
