[project]
name = "spaczz"
version = "0.6.1"
description = "Adds fuzzy matching and additional regex matching support to spaCy."
authors = [{ name = "Grant Andersen", email = "gandersen.codes@gmail.com" }]
requires-python = ">=3.7,<4"
readme = "README.md"
license = "MIT"
keywords = [
    "fuzzy matching",
    "spacy",
    "nlp",
]
dependencies = [
    "spacy>=3.0,<4",
    "catalogue",
    "srsly",
    "rapidfuzz>=1.0.0",
    "regex>=2020.6.8",
    "importlib_metadata ; python_full_version < '3.8'",
    "typing_extensions ; python_full_version < '3.8'",
]

[project.urls]
Homepage = "https://github.com/gandersen101/spaczz"
Repository = "https://github.com/gandersen101/spaczz"
Documentation = "https://spaczz.readthedocs.io"

[project.entry-points.spacy_factories]
spaczz_ruler = "spaczz.pipeline:SpaczzRuler"

[dependency-groups]
black = ["black>=22.3"]
isort = ["isort>=5.10"]
lint = [
    "darglint>=1.8",
    "flake8>=5.0",
    "flake8-annotations>=2.9",
    "flake8-bandit>=4.0",
    "flake8-black>=0.3",
    "flake8-bugbear>=22.4",
    "flake8-docstrings>=1.6",
    "flake8-import-order>=0.18",
]
mypy = [
    "mypy>=1.0",
    "nox",
    "pytest",
]
test = [
    "coverage[toml]",
    "pytest",
    "pytest-cov",
]
xdoctest = ["xdoctest>=1.0"]
readme = [
    "ipykernel",
    "nbconvert",
]
docs = [
    "sphinx>=4.0.2",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
]
automation = ["nox"]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configure where the source code lives
[tool.hatch.build.targets.wheel]
packages = ["src/spaczz"]

# Config

[tool.black]
extend-exclude = '''
(
  notebooks/
)
'''

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
show_missing = true
fail_under = 96

[tool.coverage.run]
branch = true
source = ["spaczz"]

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
force_single_line = true
force_sort_within_sections = true
lexicographical = true
single_line_exclusions = ["typing"]
order_by_type = false
group_by_package = true
reverse_relative = true

[[tool.mypy.overrides]]
module = [
    "catalogue",
    "regex",
    "rich.*",
    "srsly",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
